app/stock/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dpl
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0%
    type: RollingUpdate
  selector:
    matchLabels:
      service_name: dpl
      service_group: app
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        service_name: dpl
        service_group: app
    spec:
      restartPolicy: Always
      containers:
        - name: dpl
          image: abdullahainun4/stock-service
          imagePullPolicy: Always
          ports:
            - name: app-port
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: app-port
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            failureThreshold: 3
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: app-port
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 10
          resources:
            requests:
              cpu: "0.1"
              memory: "100Mi"          
          securityContext:
            runAsUser: 0
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "15"]
