app/stock/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
